# uwrt_mars_rover

./: .catkin-lint  .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile.dev  Dockerfile.devcontainer  Dockerfile.development  Dockerfile.jetson  Dockerfile.prod  LICENSE  README.md  arm64_upstream_dependencies.rosinstall  common_upstream_dependencies.repos  compile_commands.json  linux_arm64_upstream_dependencies.repos  metapackage_dependencies.repos  metapackage_dependencies.rosinstall  repository.rosinstall  robot_cleaner.cpp  upstream_dependencies.repos  upstream_dependencies.rosinstall  uwrt.rosinstall  windows_amd64_upstream_dependencies.repos
drive_to_gps/: CMakeLists.txt  package.xml
drive_to_gps/cfg/: CurrentHeading.cfg
drive_to_gps/include/: calculate_degrees.h
drive_to_gps/launch/: gps_goal.launch
drive_to_gps/msg/: dist_heading.msg  heading.msg
drive_to_gps/src/: calculate_twist.cpp  calculate_twist_server.cpp  current_heading.cpp  turtle_client.cpp
indexer_controller/: CMakeLists.txt  indexer_controller_plugins.xml  package.xml
indexer_controller/msg/: IndexerData.msg
indexer_controller/src/: indexer_command_controller.cpp  indexer_state_controller.cpp
led_matrix_control_sar/: CMakeLists.txt  package.xml
led_matrix_control_sar/scripts/: led_matrix.py  set_led_matrix_client.py  set_led_matrix_server.py
rover_description/: CMakeLists.txt  README.md  package.xml
rover_description/launch/: description.launch
rover_description/urdf/: rover.urdf  rover.urdf.xacro
rover_description/urdf/arm/: arm.gazebo.xacro  arm.urdf.xacro  (+1 more)
rover_simulation/: CMakeLists.txt  README.md  package.xml
rover_simulation/launch/: empty_world.launch  willow_garage.launch  world.launch
uwrt_arm_cartesian_controller/: CMakeLists.txt  package.xml  uwrt_arm_cartesian_controller_plugin.xml
uwrt_arm_cartesian_controller/src/: uwrt_arm_cartesian_controller.cpp
uwrt_autonomy/: CMakeLists.txt  package.xml
uwrt_autonomy/launch/: robot_model.launch.py
uwrt_autonomy/urdf/: rover_autonomy.urdf
uwrt_autonomy/uwrt_ar_tracker/: CMakeLists.txt  package.xml
uwrt_autonomy/uwrt_autonomy/: CMakeLists.txt  package.xml
uwrt_autonomy/uwrt_state_machine/: CMakeLists.txt  package.xml
uwrt_mapviz/: CMakeLists.txt  README.md  package.xml
uwrt_mapviz/config/: uwrobotics1
uwrt_mapviz/launch/: uwrt_mapviz2.launch
uwrt_mapviz/scripts/: start_mapproxy.py
uwrt_mars_rover/: CMakeLists.txt  package.xml
uwrt_mars_rover/src/: main.cpp
uwrt_mars_rover_blackfly_calibration/: README.md  package.xml  setup.cfg  setup.py
uwrt_mars_rover_blackfly_calibration/calibration_data/: left_18475242.txt  left_18475242.yaml
uwrt_mars_rover_blackfly_calibration/launch/: blackfly_calibration.launch.xml
uwrt_mars_rover_blackfly_calibration/uwrt_mars_rover_blackfly_calibration/: broadcaster.py
uwrt_mars_rover_bringup/: CMakeLists.txt  package.xml
uwrt_mars_rover_bringup/launch/: basestation.launch  cameras.launch  rover.launch  rover_boot.launch
uwrt_mars_rover_bringup/scripts/: bringup_can.sh  bringup_fake_can.sh
uwrt_mars_rover_control/: CMakeLists.txt  package.xml
uwrt_mars_rover_control/cfg/: control_loop.yaml  rover_controllers.yaml  rover_hardware.yaml
uwrt_mars_rover_control/launch/: rover_control.launch
uwrt_mars_rover_control/src/: uwrt_mars_rover_control_loop.cpp  uwrt_mars_rover_control_loop_real.cpp  uwrt_mars_rover_control_node.cpp
uwrt_mars_rover_description/: CMakeLists.txt  README.md  package.xml
uwrt_mars_rover_description/cfg/: controller.yaml
uwrt_mars_rover_description/config/: controller.yaml
uwrt_mars_rover_description/launch/: controller.launch  display.launch  gazebo.launch
uwrt_mars_rover_description/meshes/: Component2_1.stl  Component3_1.stl  Component4_1.stl  Component5_1.stl  base_link.stl  bicep.stl  chassis.stl  claw_rotate.stl  claw_static.stl  claw_up_down.stl  forearm.stl  gripper_finger_left.stl  gripper_finger_right.stl  hex_key.stl  rocker.stl  servo.stl  turntable.stl  wheel.stl
uwrt_mars_rover_description/urdf/: common.gazebo  common.trans  materials.xacro  robot.gazebo  robot.xacro  robot_arm.xacro  robot_chassis.xacro  robot_claw.xacro  robot_ex.gazebo  robot_ex.trans  robot_ex.xacro
uwrt_mars_rover_gimbtonomy/: CMakeLists.txt  package.xml
uwrt_mars_rover_gimbtonomy/src/: uwrt_mars_rover_gimbtonomy_can.cpp  uwrt_mars_rover_gimbtonomy_neopixel.cpp  uwrt_mars_rover_gimbtonomy_node.cpp  uwtr_mars_rover_gimbtonomy_node.cpp
uwrt_mars_rover_hw/: CMakeLists.txt  package.xml  uwrt_mars_rover_hw_plugin.xml
uwrt_mars_rover_hw/config/: control_loop.yaml  drivetrain_controllers.yaml  fw_config.h  hardware.yaml  rover_controllers.yaml  rover_hardware.yaml  science_controllers.yaml
uwrt_mars_rover_hw/include/: uwrt_mars_rover_hw_science.h  uwrt_mars_rover_hw_science_real.h
uwrt_mars_rover_hw/launch/: drivetrain_control.launch  rover_control.launch  science_control.launch
uwrt_mars_rover_hw/src/: uwrt_mars_rover_hw_control_loop.cpp  uwrt_mars_rover_hw_control_loop_real.cpp  uwrt_mars_rover_hw_drivetrain.cpp  uwrt_mars_rover_hw_drivetrain_real.cpp  uwrt_mars_rover_hw_node.cpp  uwrt_mars_rover_hw_science.cpp  uwrt_mars_rover_hw_science_real.cpp  uwrt_mars_rovre_hw_science_real.cpp
uwrt_mars_rover_hw_bridge/: CMakeLists.txt  package.xml
uwrt_mars_rover_led_matrix/: package.xml  setup.cfg  setup.py
uwrt_mars_rover_led_matrix/launch/: led_matrix_color_launch.py
uwrt_mars_rover_led_matrix/uwrt_mars_rover_led_matrix/: led_pins.py  rgb_pins.py
uwrt_mars_rover_localization/: CMakeLists.txt  package.xml
uwrt_mars_rover_localization/launch/: localization.launch
uwrt_mars_rover_localization/src/: imu_publisher.cpp  odom_publisher.cpp
uwrt_mars_rover_msgs/: CMakeLists.txt  package.xml
uwrt_mars_rover_msgs/msg/: NeopixelArrayMode.msg  PidTuningApi.msg  UWRTRoverPosCmd.msg  gps_heading.msg  pid_api_message.msg  pid_tuning_api.msg  pid_tuning_api_msg.msg
uwrt_mars_rover_msgs/srv/: pid_api.srv  pid_api_service.srv  pid_tuning_api.srv  pid_tuning_api_srv.srv  set_state.srv
(+1685 files in other folders)
