<?xml version="1.0"?>
<package format="2">
    <name>indexer_controller</name>
    <version>0.0.0</version>
    <description>Cutsom controller for controlling and publishing state of indexers</description>

    <maintainer email="wrraftus@uwaterloo.ca">wraftus</maintainer>

    <license>MIT</license>


    <buildtool_depend>catkin</buildtool_depend>

    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>realtime_tools</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>

    <export>
        <controller_interface plugin="${prefix}/indexer_controller_plugins.xml"/>
    </export>    
</package>