<?xml version="1.0"?>
<package format="2">
  <name>led_matrix_control_sar</name>
  <version>0.0.0</version>
  <description>Temporary package for SAR LED Matrix direct control by the Jetson</description>

  <maintainer email="cindyli0213@hotmail.com">Cindy Li</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>uwrt_mars_rover_msgs</depend>
</package>
