<?xml version="1.0"?>
<package format="2">
  <name>rover_description</name>
  <version>0.0.0</version>
  <description>URDF and mesh assets for the Rover</description>

  <maintainer email="s2daga@uwaterloo.ca">Somesh Daga</maintainer>
  <license>MIT</license>
  <author email="s2daga@uwaterloo.ca">Somesh Daga</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
