<?xml version="1.0"?>
<package format="2">

    <name>uwrt_mars_rover</name>
    <version>0.0.0</version>
    <description>Metapackage containing all of UWRT's packages for our URC Mars Rover</description>

    <maintainer email="melvin.mc.wang@gmail.com">Melvin Wang</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>uwrt_mars_rover_arm</exec_depend>
    <exec_depend>uwrt_mars_rover_autonomy</exec_depend>
    <exec_depend>uwrt_mars_rover_bringup</exec_depend>
    <exec_depend>uwrt_mars_rover_control</exec_depend>
    <exec_depend>uwrt_mars_rover_description</exec_depend>
    <exec_depend>uwrt_mars_rover_drivetrain</exec_depend>
    <exec_depend>uwrt_mars_rover_msgs</exec_depend>
    <exec_depend>uwrt_mars_rover_neopixel</exec_depend>
    <exec_depend>uwrt_mars_rover_science</exec_depend>
    <exec_depend>uwrt_mars_rover_utils</exec_depend>

    <export>
        <metapackage/>
    </export>

</package>

