<?xml version="1.0"?>
<package format="2">
  <name>uwrt_mars_rover_bringup</name>
  <version>0.0.0</version>
  <description>All top-level robot roslauch files for uwrt_mars_rover</description>

  <maintainer email="melvin.mc.wang@gmail.com">Melvin Wang</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>uwrt_mars_rover_control</exec_depend>
  <exec_depend>uwrt_mars_rover_localization</exec_depend>

</package>
