<?xml version="1.0"?>
<package format="2">
  <name>uwrt_mars_rover_control</name>
  <version>0.0.0</version>
  <description>Metapackage containing the rover's top-level control loops, launch files and the combined hw node </description>

  <maintainer email="melvin.mc.wang@gmail.com">wmmc88</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>combined_robot_hw</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>uwrt_mars_rover_drivetrain_hw</depend>
  <depend>uwrt_mars_rover_utils</depend>

  <exec_depend>rqt_controller_manager</exec_depend>

</package>
