<?xml version="1.0"?>
<package format="2">
  <name>uwrt_mars_rover_description</name>
  <version>0.0.0</version>
  <description>Top-Level urdf, meshes, worlds for uwrt_mars_rover. Integrates subsystem models into one rover model.</description>

  <maintainer email="azumnanji@gmail.com">Azum Nanji</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

</package>
