<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uwrt_mars_rover_description</name>
  <version>0.0.0</version>
  <description>Package containing URDF and description files of the UWRT rover's full robot, combining description packages for individual subsystems.</description>
  <maintainer email="keyonjerome@gmail.com">Keyon Jerome</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
