<?xml version="1.0"?>
<package format="2">
    <name>uwrt_mars_rover_gimbtonomy</name>
    <version>0.0.0</version>
    <description>Package for ROS implementation of neopixels</description>

    <maintainer email="yreda@uwaterloo.com">yreda1999</maintainer>

    <license>MIT</license>


    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>

</package>
