<?xml version="1.0"?>
<package format="2">
  <name>uwrt_mars_rover_hw</name>
  <version>0.0.0</version>
  <description>Package containing the rover's top-level hw interfaces that are designed to be shared between
    subsystems
  </description>

  <maintainer email="melvin.mc.wang@gmail.com">wmmc88</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>hardware_interface</depend>

    <depend>indexer_controller</depend>

</package>
