<?xml version="1.0"?>
<package format="2">
    <name>uwrt_mars_rover_hw</name>
    <version>0.0.0</version>
    <description>Package containing all ros-control hw interfaces and the hw control loops</description>

    <maintainer email="melvin.mc.wang@gmail.com">wmmc88</maintainer>

    <license>MIT</license>


    <buildtool_depend>catkin</buildtool_depend>

    <depend>combined_robot_hw</depend>
    <depend>controller_manager</depend>
    <depend>hardware_interface</depend>
    <depend>joint_limits_interface</depend>
    <depend>roscpp</depend>
    <depend>transmission_interface</depend>

    <export>
        <hardware_interface plugin="${prefix}/uwrt_mars_rover_hw_plugin.xml"/>
    </export>

</package>
