<?xml version="1.0"?>
<package format="2">
  <name>uwrt_mars_rover_hw_bridge</name>
  <version>0.0.0</version>
  <description>HW Bridge repo used by SW and FW</description>

  <maintainer email="younesreda1@outlook.com">younes</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
