<?xml version="1.0"?>
<package format="2">
  <name>uwrt_mars_rover_localization</name>
  <version>0.0.0</version>
  <description>The uwrt_mars_rover_localization package</description>

  <maintainer email="cindyli0213@hotmail.com">Cindy Li</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
